--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
 	<title>Basic-Porfolio</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+  <meta name="viewport" content="width = device-width, initial-scale = 1">
 </head>
 <body>
   <header>
